--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,32 @@ deploy_development:
     - if: '$CI_COMMIT_BRANCH == "development"'
       when: always
 
+# Deploy a review app when a new merge request is created
+
+deploy_review:
+  stage: deploy
+  script:
+    - cd Sources
+    - sudo ./run_container.sh
+  environment:
+    name: review/$CI_COMMIT_REF_SLUG
+    url: https://$CI_ENVIRONMENT_SLUG.sc-nas.fit.vutbr.cz:3120/
+    on_stop: stop_review
+    auto_stop_in: 2 weeks
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+
+stop_review:
+  stage: deploy
+  script:
+    - echo "Remove review app"
+  environment:
+    name: review/$CI_COMMIT_REF_SLUG
+    action: stop
+  rules:
+    - if: $CI_MERGE_REQUEST_ID
+      when: manual
+
 # Backend simulator
 
 build_backend:
