#10: Auto-formatting part 2 A wrong setting created ludicrous 100+ wide indentations

--- a/Sources/simulator/.editorconfig
+++ b/Sources/simulator/.editorconfig
@@ -25,7 +25,7 @@ ij_java_align_multiline_annotation_parameters = false
 ij_java_align_multiline_array_initializer_expression = false
 ij_java_align_multiline_assignment = false
 ij_java_align_multiline_binary_operation = false
-ij_java_align_multiline_chained_methods = true
+ij_java_align_multiline_chained_methods = false
 ij_java_align_multiline_deconstruction_list_components = true
 ij_java_align_multiline_extends_list = false
 ij_java_align_multiline_for = true
@@ -144,7 +144,7 @@ ij_java_local_variable_name_prefix =
 ij_java_local_variable_name_suffix = 
 ij_java_method_annotation_wrap = split_into_lines
 ij_java_method_brace_style = next_line
-ij_java_method_call_chain_wrap = normal
+ij_java_method_call_chain_wrap = on_every_item
 ij_java_method_parameters_new_line_after_left_paren = false
 ij_java_method_parameters_right_paren_on_new_line = false
 ij_java_method_parameters_wrap = on_every_item
