--- a/Sources/simulator/build.gradle
+++ b/Sources/simulator/build.gradle
@@ -14,6 +14,8 @@ repositories {
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.jetbrains:annotations:19.0.0'
+    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
+
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation 'org.mockito:mockito-core:5.5.0'
@@ -37,7 +39,7 @@ jar {
         attributes(
                 'Main-Class': 'RISCVsimulator',
                 'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' '),
-                'Application-Name' : 'RISC-V simulator'
+                'Application-Name': 'RISC-V simulator'
         )
     }
 }
