--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -65,6 +65,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3",
+    "tsd": "^0.29.0",
     "typescript": "^4.9.5"
   },
   "lint-staged": {
