--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 
 # Frontend website
 
+# tag: riscvsim
+
 build_frontend:
   stage: build
   image: node:18-alpine
@@ -12,6 +14,8 @@ build_frontend:
     paths:
       - Sources/frontend/node_modules/
       - Sources/frontend/.next/
+  tags:
+    - riscvsim
 
 # Run Tests
 test_frontend:
@@ -23,6 +27,8 @@ test_frontend:
   script:
     - cd Sources/frontend
     - npm run test
+  tags:
+    - riscvsim
 
 # Deploy the app
 # Runs on commit to development branch
@@ -39,6 +45,8 @@ deploy_development:
   rules:
     - if: '$CI_COMMIT_BRANCH == "development"'
       when: always
+  tags:
+    - riscvsim
 
 # Deploy a review app when a new merge request is created
 
@@ -54,6 +62,8 @@ deploy_review:
     auto_stop_in: 2 weeks
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+  tags:
+    - riscvsim
 
 stop_review:
   stage: deploy
@@ -65,6 +75,8 @@ stop_review:
   rules:
     - if: $CI_MERGE_REQUEST_ID
       when: manual
+  tags:
+    - riscvsim
 
 # Backend simulator
 
@@ -74,6 +86,8 @@ build_backend:
   script:
     - cd Sources/simulator
     - ./gradlew assemble
+  tags:
+    - riscvsim
 
 test_backend:
   stage: test
@@ -82,3 +96,5 @@ test_backend:
     - cd Sources/simulator
     - ./gradlew test
   allow_failure: true
+  tags:
+    - riscvsim
