--- a/Sources/docker-compose.yml
+++ b/Sources/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: riscvsim-web
     build:
       context: ./frontend
+      target: runner
       args:
         NEXT_PUBLIC_SIMSERVER_URL: http://localhost:8120
         DOCKER_BUILDKIT: 1
