#7: Optimized stages of Java Dockerfile

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,8 +79,7 @@ test_backend:
   stage: test
   script:
     - cd Sources/simulator
-    - docker build -t sources_riscvsim-server .
-    - docker run sources_riscvsim-server ./gradlew test
+    - docker build -t sources_riscvsim-server --target test .
   allow_failure: true
   tags:
     - riscvsim
