--- a/Sources/docker-compose.yml
+++ b/Sources/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - 3120:3000
   riscvsim-server:
     container_name: riscvsim-server
-    build: ./simulator
+    build:
+      context: ./simulator
+      target: runner
     ports:
       - 8120:8000
