--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -25,6 +25,7 @@
     "@uiw/codemirror-extensions-langs": "^4.21.9",
     "@uiw/codemirror-theme-github": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.260.0",
     "next": "^13.4.10",
@@ -36,6 +37,8 @@
     "react-redux": "^8.1.2",
     "reapop": "^4.2.2",
     "redux-persist": "^6.0.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.2"
   },
