--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -20,6 +20,8 @@
     "@codemirror/lint": "^6.4.2",
     "@codemirror/state": "^6.2.1",
     "@hookform/resolvers": "^3.3.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.5",
@@ -29,6 +31,7 @@
     "@uiw/react-codemirror": "^4.21.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.260.0",
     "next": "^13.4.10",
     "react": "^18.2.0",
