--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -21,9 +21,11 @@
     "@codemirror/state": "^6.2.1",
     "@hookform/resolvers": "^3.3.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@svgdotjs/svg.js": "^3.2.0",
     "@uiw/codemirror-extensions-langs": "^4.21.9",
