--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -21,6 +21,7 @@
     "@codemirror/state": "^6.2.1",
     "@hookform/resolvers": "^3.3.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
