--- a/Sources/simulator/build.gradle
+++ b/Sources/simulator/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'groovy'
     id 'application'
+    id 'com.adarshr.test-logger' version '4.0.0'
 }
 
 group 'com.gradle.superscalarsim'
