--- a/Sources/simulator/Dockerfile
+++ b/Sources/simulator/Dockerfile
@@ -1,10 +1,11 @@
-FROM gradle:8.4.0-jdk17-focal AS base
+FROM gradle:8.4.0-jdk17-jammy AS base
 
 # Install dependencies only when needed
 FROM base AS deps
 # Ignore the error code from apt-get update - happens on old versions of docker
-RUN apt-get update && apt-get install -y gcc-riscv64-linux-gnu; exit 0
-RUN /usr/bin/riscv64-linux-gnu-gcc --version
+# gcc-12-riscv64-linux-gnu is not available on ubuntu 20.04
+RUN apt-get update && apt-get install -y gcc-12-riscv64-linux-gnu; exit 0 
+RUN /usr/bin/riscv64-linux-gnu-gcc-12 --version
 WORKDIR /app
 
 FROM deps AS build
