--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "fast-base64-decode": "^2.0.0",
     "lucide-react": "^0.260.0",
     "next": "^13.4.10",
     "react": "^18.2.0",
