#16: changed base64 library

--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -33,10 +33,10 @@
     "@uiw/codemirror-extensions-langs": "^4.21.9",
     "@uiw/codemirror-theme-github": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
+    "base64-js": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
-    "fast-base64-decode": "^2.0.0",
     "lucide-react": "^0.260.0",
     "next": "^13.4.10",
     "react": "^18.2.0",
