--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -53,6 +53,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.4.0",
     "@next/bundle-analyzer": "^14.0.3",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.5",
