#16: biome automatic lints

--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "eslint src --fix",
+    "lint": "npx @biomejs/biome check src",
+    "lint:fix": "biome check --apply ./src",
+    "lint:fix-unsafe": "biome check --apply-unsafe ./src",
     "lint:strict": "eslint --max-warnings=0 src",
     "typecheck": "tsc --noEmit --incremental false",
     "test:watch": "jest --watch",
@@ -70,6 +71,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.10",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.4.31",
