--- a/Sources/frontend/biome.json
+++ b/Sources/frontend/biome.json
@@ -9,6 +9,9 @@
       "recommended": true,
       "suspicious": {
         "noConfusingVoidType":"off"
+      },
+      "correctness": {
+        "noUnreachable": "warn"
       }
     }
   },
