#16: all linting of biome resolved

--- a/Sources/frontend/biome.json
+++ b/Sources/frontend/biome.json
@@ -3,12 +3,21 @@
   "organizeImports": {
     "enabled": true
   },
+  "formatter": {
+    "enabled": true,
+    "formatWithErrors": false,
+    "indentStyle": "space",
+    "indentWidth": 2,
+    "lineWidth": 80,
+    "ignore": []
+  },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noConfusingVoidType":"off"
+        "noConfusingVoidType": "off",
+        "noConsoleLog": "warn"
       },
       "correctness": {
         "noUnreachable": "warn"
