--- a/Sources/frontend/.env.example
+++ b/Sources/frontend/.env.example
@@ -3,4 +3,5 @@
 # DEVELOPMENT TOOLS
 # Ideally, don't add them to production deployment envs
 # !STARTERCONF Change to true if you want to log data
-NEXT_PUBLIC_SHOW_LOGGER="false"
+NEXT_PUBLIC_SIMSERVER_PORT=8120
+NEXT_PUBLIC_SIMSERVER_HOST=localhost
