#6: File location configuration

--- a/Sources/simulator/config_dev.properties
+++ b/Sources/simulator/config_dev.properties
@@ -1,1 +1,4 @@
 gcc.path=/usr/bin/riscv64-linux-gnu-gcc-12
+registerFileDir.path=./registers/
+instructionsFile.path=./supportedInstructions.json
+registerAliasesFile.path=./registerAliases.json
