--- a/Sources/simulator/config_prod.properties
+++ b/Sources/simulator/config_prod.properties
@@ -1,1 +1,4 @@
 gcc.path=/usr/bin/riscv-none-elf-gcc
+registerFileDir.path=./registers/
+instructionsFile.path=./supportedInstructions.json
+registerAliasesFile.path=./registerAliases.json
