--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hotkeys-hook": "^4.4.1",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "reapop": "^4.2.2",
