#12: Server requests timeout

--- a/Sources/simulator/build.gradle
+++ b/Sources/simulator/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.15.3'
 
+    // Deserialization of Optional<T>
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.16.1'
+
     // https://mvnrepository.com/artifact/com.kjetland/mbknor-jackson-jsonschema
     implementation group: 'com.kjetland', name: 'mbknor-jackson-jsonschema_2.13', version: '1.0.39'
 
