--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -17,10 +17,10 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
-    "@codemirror/lint": "^6.4.2",
-    "@codemirror/state": "^6.3.2",
+    "@codemirror/lint": "^6.5.0",
+    "@codemirror/state": "^6.4.0",
     "@hookform/error-message": "^2.0.1",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -31,47 +31,48 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@reduxjs/toolkit": "^1.9.7",
+    "@reduxjs/toolkit": "^2.1.0",
     "@svgdotjs/svg.js": "^3.2.0",
     "@uiw/codemirror-extensions-langs": "^4.21.21",
     "@uiw/codemirror-theme-github": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
     "base64-js": "^1.5.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
-    "lucide-react": "^0.293.0",
-    "next": "^14.0.3",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
+    "lucide-react": "^0.319.0",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-hotkeys-hook": "^4.4.1",
+    "react-hook-form": "^7.49.3",
+    "react-hotkeys-hook": "^4.4.4",
     "react-minimal-pie-chart": "^8.4.0",
     "react-modal": "^3.16.1",
-    "react-redux": "^8.1.3",
+    "react-redux": "^9.1.0",
     "reapop": "^4.2.2",
     "redux-persist": "^6.0.0",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.9.1",
+    "usehooks-ts": "^2.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.4.0",
-    "@next/bundle-analyzer": "^14.0.3",
+    "@biomejs/biome": "1.5.3",
+    "@next/bundle-analyzer": "^14.1.0",
     "@svgr/webpack": "^8.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.2.39",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.48",
     "@types/react-modal": "^3.16.3",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "next-router-mock": "^0.9.10",
+    "next-router-mock": "^0.9.11",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "tsd": "^0.29.0",
-    "typescript": "^5.3.2"
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "tsd": "^0.30.4",
+    "typescript": "^5.3.3"
   }
 }
