--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -41,14 +41,15 @@
     "cmdk": "^0.2.1",
     "lucide-react": "^0.319.0",
     "next": "^14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-hotkeys-hook": "^4.4.4",
     "react-minimal-pie-chart": "^8.4.0",
     "react-redux": "^9.1.0",
-    "reapop": "^4.2.2",
     "redux-persist": "^6.0.0",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
