#13: Environment variables, server address Small bug in calling gcc

--- a/Sources/frontend/tsconfig.json
+++ b/Sources/frontend/tsconfig.json
@@ -41,7 +41,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "next.config.js"
-  ],
+, "src/constant/env.js"  ],
   "exclude": [
     "node_modules"
   ],
