--- a/Sources/simulator/build.gradle
+++ b/Sources/simulator/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     // https://mvnrepository.com/artifact/io.undertow/undertow-servlet
     implementation group: 'io.undertow', name: 'undertow-servlet', version: '2.3.8.Final'
 
+    // Logging for undertow
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.2'
+
+
     // https://mvnrepository.com/artifact/com.opencsv/opencsv
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
 
