--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -21,6 +21,7 @@
     "@codemirror/state": "^6.4.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
