#30: updated nextjs config

--- a/Sources/frontend/tsconfig.json
+++ b/Sources/frontend/tsconfig.json
@@ -40,7 +40,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next.config.js"
+    "next.config.mjs"
 , "src/constant/env.js"  ],
   "exclude": [
     "node_modules"
