#30: Instruction list virtualization Performance enhancement

--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-hook/resize-observer": "^1.2.6",
     "@reduxjs/toolkit": "^2.1.0",
     "@svgdotjs/svg.js": "^3.2.0",
     "@uiw/codemirror-extensions-langs": "^4.21.21",
@@ -49,6 +50,7 @@
     "react-hotkeys-hook": "^4.4.4",
     "react-minimal-pie-chart": "^8.4.0",
     "react-redux": "^9.1.0",
+    "react-window": "^1.8.10",
     "redux-persist": "^6.0.0",
     "sonner": "^1.4.0",
     "swr": "^2.2.4",
@@ -64,6 +66,7 @@
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.48",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.4.17",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
