--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -37,10 +37,10 @@
     "@svgdotjs/svg.js": "^3.2.0",
     "@uiw/codemirror-extensions-langs": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
-    "base64-js": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "js-base64": "^3.7.7",
     "lucide-react": "^0.319.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
