--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "biome check --apply ./src",
     "lint:fix-unsafe": "biome check --apply-unsafe ./src",
     "typecheck": "tsc --noEmit --incremental false",
-    "test": "jest",
+    "test": "vitest",
     "test:watch": "jest --watch",
     "format": "npx @biomejs/biome format src/ --write",
     "format:check": "npx @biomejs/biome format ./src",
@@ -64,18 +64,21 @@
     "@next/bundle-analyzer": "^14.1.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.0",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^14.2.2",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.48",
     "@types/react-window": "^1.8.8",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "next-router-mock": "^0.9.11",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "tsd": "^0.30.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.4.0"
   }
 }
