--- a/Sources/frontend/tsconfig.json
+++ b/Sources/frontend/tsconfig.json
@@ -40,8 +40,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next.config.mjs"
-, "src/constant/env.js"  ],
+    "next.config.mjs",
+    "tests",
+ "src/constant/env.js"  ],
   "exclude": [
     "node_modules"
   ],
@@ -51,3 +52,4 @@
     "node"
   ]
 }
+
