--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "biome check --apply ./src",
     "lint:fix-unsafe": "biome check --apply-unsafe ./src",
     "typecheck": "tsc --noEmit --incremental false",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest dev",
     "format": "npx @biomejs/biome format src/ --write",
     "format:check": "npx @biomejs/biome format ./src",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
