--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-hook/resize-observer": "^1.2.6",
+    "@reactour/tour": "^3.6.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@svgdotjs/svg.js": "^3.2.0",
     "@uidotdev/usehooks": "^2.4.1",
