--- a/Sources/simulator/build.gradle
+++ b/Sources/simulator/build.gradle
@@ -5,6 +5,22 @@ plugins {
     id 'application'
     id 'com.adarshr.test-logger' version '4.0.0'
     id "me.champeau.jmh" version "0.7.2"
+    id 'maven-publish'
+}
+
+publishing {
+    publications {
+        customLibrary(MavenPublication) {
+            from components.java
+        }
+    }
+
+    repositories {
+        maven {
+            name = 'sampleRepo'
+            url = layout.buildDirectory.dir("repo")
+        }
+    }
 }
 
 group 'com.gradle.superscalarsim'
