--- a/Sources/proxy/nginx.conf
+++ b/Sources/proxy/nginx.conf
@@ -5,30 +5,18 @@ events {
 http {
     server {
         listen 3120;
-        server_name localhost;
-
-        location / {
-            proxy_pass http://web:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-
-    server {
         listen 3121 ssl;
-        server_name localhost;
-
         ssl_certificate /etc/nginx/certs/fullchain.pem;
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location / {
             proxy_pass http://web:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/sim {
+            proxy_pass http://simserver:8000;
+            rewrite ^/api/sim/(.*)$ /$1 break;
         }
     }
 }
+
