Optional http-only proxy, readme update

--- a/Sources/proxy/nginx.conf
+++ b/Sources/proxy/nginx.conf
@@ -4,10 +4,12 @@ events {
 
 http {
     server {
+        # TODO: HTTP and HTTPS on the same port
         listen 3120;
         listen 3121 ssl;
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+
+        # If the file exists, include it and enable SSL
+        include ssl.conf*;
 
         location / {
             proxy_pass http://web:3000;
