--- a/Sources/docker-compose.yml
+++ b/Sources/docker-compose.yml
@@ -2,48 +2,21 @@ name: riscvsim
 version: "2.3"
 services:
   web:
-    image: majeris/riscv-sim-frontend:latest
-    build:
-      context: ./frontend
-      target: runner
-      args:
-        DOCKER_BUILDKIT: 1
-    environment:
-      - NODE_ENV=production
-      - NEXT_PUBLIC_SIMSERVER_HOST=simserver # The name of the service in the docker-compose file
-    ports:
-      - 3100:3000
-    logging:
-      driver: "local"
-      options:
-        max-size: "10m"
-        max-file: "3"
-    depends_on:
-      - simserver
-    links:
-      - simserver
+    extends:
+      file: docker-compose.http.yml
+      service: web
 
-  nginx:
-    image: nginx:alpine
-    container_name: nginx_proxy
-    ports:
-      - "3120:3120"
-      - "3121:3121"
+  gateway:
+    extends:
+      file: docker-compose.http.yml
+      service: gateway
     volumes:
-      - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+      # The HTTPS compose is reliant on the SSL configuration.
+      # Therefore, run it from Sources/
+      - ./proxy/ssl.conf:/etc/nginx/ssl.conf:ro
       - ./proxy/certs:/etc/nginx/certs:ro
-    depends_on:
-      - web
 
   simserver:
-    image: majeris/riscv-sim-backend:latest
-    build:
-      context: ./simulator
-      target: runner
-    ports:
-      - 8120:8000
-    logging:
-      driver: "local"
-      options:
-        max-size: "10m"
-        max-file: "3"
+    extends:
+      file: docker-compose.http.yml
+      service: simserver
