--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -6,16 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "npx @biomejs/biome check src",
+    "lint": "@biomejs/biome check src",
     "lint:fix": "biome check --apply ./src",
     "lint:fix-unsafe": "biome check --apply-unsafe ./src",
     "typecheck": "tsc --noEmit --incremental false",
     "test": "vitest run",
     "test:watch": "vitest dev",
-    "format": "npx @biomejs/biome format src/ --write",
-    "format:check": "npx @biomejs/biome format ./src",
+    "format": "@biomejs/biome format src/ --write",
+    "format:check": "@biomejs/biome format ./src",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "dependencies": "npx npm-check-updates --interactive"
+    "dependencies": "npm-check-updates --interactive"
   },
   "dependencies": {
     "@codemirror/lint": "^6.7.0",
