--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
+    "@happy-dom/global-registrator": "^15.7.4",
     "@next/bundle-analyzer": "^14.2.3",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.5",
