--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -10,8 +10,6 @@
     "lint:fix": "biome check --apply ./src",
     "lint:fix-unsafe": "biome check --apply-unsafe ./src",
     "typecheck": "tsc --noEmit --incremental false",
-    "test": "vitest run",
-    "test:watch": "vitest dev",
     "format": "@biomejs/biome format src/ --write",
     "format:check": "@biomejs/biome format ./src",
     "postbuild": "next-sitemap --config next-sitemap.config.js"
@@ -78,7 +76,6 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "tsd": "^0.31.0",
-    "typescript": "^5.4.5",
-    "vitest": "^1.6.0"
+    "typescript": "^5.4.5"
   }
 }
