--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -6,12 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "@biomejs/biome check src",
+    "lint": "biome check src",
     "lint:fix": "biome check --apply ./src",
     "lint:fix-unsafe": "biome check --apply-unsafe ./src",
     "typecheck": "tsc --noEmit --incremental false",
-    "format": "@biomejs/biome format src/ --write",
-    "format:check": "@biomejs/biome format ./src",
+    "format": "npx biome format src/ --write",
+    "format:check": "biome format ./src",
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
@@ -76,6 +76,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "tsd": "^0.31.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@types/bun": "latest"
   }
 }
