--- a/.github/workflows/test_frontend.yml
+++ b/.github/workflows/test_frontend.yml
@@ -1,6 +1,12 @@
 name: Test Frontend
 
-on: [push, pull_request]
+# On every pull_request push and push to master and development
+on:
+  push:
+    branches:
+      - master
+      - development
+  pull_request:
 
 jobs:
   format:
