--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -10,28 +10,7 @@ on:
 
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./Sources/simulator
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      - name: Set up Maven
-        uses: stCarolas/setup-maven@v5
-        with:
-          maven-version: 3.9.9
-
-      - name: Run the Maven verify phase
-        run: mvn --batch-mode --update-snapshots verify
-
-  test:
-    name: Test
+    name: Build and Test
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -39,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Building it tests it
+      # Building the container tests it
       - name: Build Container
         run: docker build -t simulator .
 
