--- a/Sources/frontend/package.json
+++ b/Sources/frontend/package.json
@@ -65,6 +65,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
+    "@types/bun": "^1.1.12",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.2",
     "@types/react-window": "^1.8.8",
@@ -76,7 +77,6 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "tsd": "^0.31.0",
-    "typescript": "^5.4.5",
-    "@types/bun": "latest"
+    "typescript": "^5.4.5"
   }
 }
